# Octave-Plugin

./: CMakeLists.txt  FindOCTAVE .cmake  README.md  build_binary.sh  interpreter.cpp  octave.ecllib  octave_plugin_test.ecl  octaveembed.cpp  octavetry.cc  week3.ecl  week4.ecl  week5.ecl  week6.ecl
HPCC-Platform/: DartConfiguration.tcl
HPCC-Platform/cmake_modules/: FindOCTAVE .cmake  commonSetup.cmake
HPCC-Platform/plugin_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake
HPCC-Platform/plugin_build/dali/base/: CTestTestfile.cmake  Makefile  cmake_install.cmake
HPCC-Platform/plugin_build/rtl/eclrtl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
HPCC-Platform/plugin_build/rtl/nbcd/: CTestTestfile.cmake  Makefile  cmake_install.cmake
HPCC-Platform/plugin_build1/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  build-config.h  cmake_install.cmake  cmake_uninstall.cmake
HPCC-Platform/plugin_build1/dali/base/: CTestTestfile.cmake  Makefile  cmake_install.cmake
HPCC-Platform/plugin_build1/roxie/roxiemem/: CTestTestfile.cmake  Makefile  cmake_install.cmake
HPCC-Platform/plugin_build1/rtl/eclrtl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
HPCC-Platform/plugin_build1/rtl/nbcd/: CTestTestfile.cmake  Makefile  cmake_install.cmake
HPCC-Platform/plugin_build1/system/jlib/: Makefile  (+2 more)
HPCC-Platform/plugins/: CMakeLists.txt
HPCC-Platform/plugins/octave/: CMakeLists.txt
(+58 files in other folders)
